<?xml version="1.0"?>
<package format="2">
  <name>planner</name>
  <version>0.0.0</version>
  <description>The planner package</description>
  <maintainer email="patku001@umn.edu">Yash</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export></export>
</package>
